{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 16,
  "lineage": "7fc9514d-8ee3-69e3-32ce-60ac9ea83bd1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.1.1.50",
            "association_id": "eipassoc-0608523f5bea40015",
            "domain": "vpc",
            "id": "eipalloc-0c31d8e6eca7e9edd",
            "instance": "i-01b2067201825069c",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-06028cc763b803cea",
            "private_dns": "ip-10-1-1-50.eu-west-1.compute.internal",
            "private_ip": "10.1.1.50",
            "public_dns": "ec2-54-155-224-93.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.155.224.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.vincent-gw",
            "aws_network_interface.web-server-ni",
            "aws_security_group.allow_web",
            "aws_subnet.frontend",
            "aws_vpc.vincent-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08bac620dc84221eb",
            "arn": "arn:aws:ec2:eu-west-1:203362448266:instance/i-041806342a83eed75",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041806342a83eed75",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vincent-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-06028cc763b803cea"
              }
            ],
            "primary_network_interface_id": "eni-06028cc763b803cea",
            "private_dns": "ip-10-1-1-50.eu-west-1.compute.internal",
            "private_ip": "10.1.1.50",
            "public_ip": "54.155.224.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f34d9c8c947cb27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0624387504405a776",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fe7811a2ca466fd9"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-ni"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vincent-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:203362448266:internet-gateway/igw-0b13317d05a66dbd1",
            "id": "igw-0b13317d05a66dbd1",
            "owner_id": "203362448266",
            "vpc_id": "vpc-03dd7426a1cbfebbb"
          },
          "dependencies": [
            "aws_vpc.vincent-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0088dd956aced9f48",
                "device_index": 0,
                "instance": "i-01b2067201825069c"
              }
            ],
            "id": "eni-06028cc763b803cea",
            "ipv6_address_count": 0,
            "mac_address": "02:b1:5b:61:d1:d5",
            "private_ip": "10.1.1.50",
            "private_ips": [
              "10.1.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0fe7811a2ca466fd9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0624387504405a776"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.frontend",
            "aws_vpc.vincent-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vincent-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0519a778cbd72b4b9",
            "owner_id": "203362448266",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b13317d05a66dbd1",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b13317d05a66dbd1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Vincent-Route"
            },
            "vpc_id": "vpc-03dd7426a1cbfebbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vincent-gw",
            "aws_vpc.vincent-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067fb2e61338241cd",
            "route_table_id": "rtb-0519a778cbd72b4b9",
            "subnet_id": "subnet-0624387504405a776"
          },
          "dependencies": [
            "aws_internet_gateway.vincent-gw",
            "aws_route_table.vincent-route",
            "aws_subnet.frontend",
            "aws_vpc.vincent-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:203362448266:security-group/sg-0fe7811a2ca466fd9",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe7811a2ca466fd9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "203362448266",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dd7426a1cbfebbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vincent-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:203362448266:subnet/subnet-0624387504405a776",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0624387504405a776",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203362448266",
            "tags": {
              "Name": "Frontend-sn"
            },
            "tags_all": {
              "Name": "Frontend-sn"
            },
            "vpc_id": "vpc-03dd7426a1cbfebbb"
          },
          "dependencies": [
            "aws_vpc.vincent-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vincent-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:203362448266:vpc/vpc-03dd7426a1cbfebbb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f036935f3f945801",
            "default_route_table_id": "rtb-0efc7ad3084d2d054",
            "default_security_group_id": "sg-04e90d9a9a1af45c3",
            "dhcp_options_id": "dopt-9c293dfa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03dd7426a1cbfebbb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0efc7ad3084d2d054",
            "owner_id": "203362448266",
            "tags": {
              "Name": "Vincent-VPC"
            },
            "tags_all": {
              "Name": "Vincent-VPC"
            }
          }
        }
      ]
    }
  ]
}